<resources>
    <string name="app_name">UoR Campus Assistant</string>
    <!-- Main Menu Activity Strings -->
    <string name="mainStudentInfoBtnText">Student Information</string>
    <string name="mainLatestNewsBtnText">Latest News</string>
    <string name="mainCampusNavBtnText">Campus Navigation</string>
    <string name="mainTravelInfoBtnText">Travel Information</string>
    <string name="mainBbEmailBtnText">Blackboard &amp; Email</string>
    <string name="mainTimetableBtnText">Timetable</string>
    <!-- Student Information Menu Activity Strings -->
    <string name="studentInfoMenuTitle">Student Information</string>
    <string name="studentInfoServicesBtnText">Student Services</string>
    <string name="studentInfoLibraryBtnText">Library</string>
    <string name="studentInfoPaymentsBtnText">Payments</string>
    <string name="studentInfoRisisBtnText">RISIS</string>
    <string name="studentInfoStaffDirectoryBtnText">Staff Search</string>
    <!-- Campus Navigation Menu Activity Strings -->
    <string name="campusNavMenuTitle">Campus Navigation</string>
    <string name="campusNavInteractiveMapBtnText">Interactive Map</string>
    <string name="campusNavMapsBtnText">Campus Maps</string>
    <!-- Campus Maps Menu Activity Strings -->
    <string name="campusMapsWhiteknightsBtnText">Whiteknights Campus</string>
...
