<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/activity_student_services_menu"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:paddingBottom="0dp"
android:paddingLeft="0dp"
android:paddingRight="0dp"
android:paddingTop="0dp"
tools:context="com.example.andrewwilloughby.campus_assistant.StudentInfoMenu">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/activityContainer"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/headImageContainer">

                <ImageView
                    android:layout_width="match_parent"
                    app:srcCompat="@drawable/uor_bg_image"
                    android:id="@+id/headBackgroundImage"
                    android:scaleType="fitXY"
                    android:layout_height="175dp" />
            </FrameLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_gravity="right"
                android:layout_width="match_parent"
                android:layout_marginTop="5dp"
                android:paddingRight="5dp"
                android:paddingLeft="5dp"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_width="wrap_content">

                    <ImageButton
                        android:layout_height="30dp"
                        app:srcCompat="@drawable/list_icon"
                        android:layout_weight="1"
                        android:layout_width="30dp"
                        android:background="@android:color/transparent"
                        android:id="@+id/viewStyleBtn" />

                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_width="260dp"></LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <ImageButton
                        android:layout_height="30dp"
                        app:srcCompat="@drawable/safety_icon"
                        android:layout_weight="1"
                        android:background="@android:color/transparent"
                        android:backgroundTint="@android:color/transparent"
                        android:id="@+id/safetyBtn"
                        android:layout_gravity="center_vertical"
                        android:layout_marginRight="0dp"
                        android:layout_width="50dp" />
                </LinearLayout>

            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:id="@+id/firstRowLayout"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp">

                <Button
                    android:text="@string/studentInfoServicesBtnText"
                    android:layout_width="90dp"
                    android:id="@+id/studentInfoServicesBtn"
                    android:layout_weight="1"
                    android:textSize="12sp"
                    android:background="@color/StudentInfoColor"
                    android:layout_marginRight="2.5dp"
                    android:textColor="@color/TextWhite"
                    android:textAllCaps="false"
                    android:layout_height="95dp" />

                <Button
                    android:text="@string/studentInfoLibraryBtnText"
                    android:layout_width="90dp"
                    android:id="@+id/studentInfoLibraryBtn"
                    android:layout_weight="1"
                    android:textSize="12sp"
                    android:background="@color/StudentInfoColor"
                    android:layout_marginLeft="2.5dp"
                    android:textColor="@color/TextWhite"
                    android:textAllCaps="false"
                    android:textAlignment="center"
                    android:layout_height="95dp" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:id="@+id/secondRowLayout"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp">

                <Button
                    android:text="@string/studentInfoPaymentsBtnText"
                    android:id="@+id/studentInfoPaymentsBtn"
                    android:layout_weight="1"
                    android:layout_width="90dp"
                    android:background="@color/StudentInfoColor"
                    android:textSize="12sp"
                    android:layout_marginRight="2.5dp"
                    android:textColor="@color/TextWhite"
                    android:textAllCaps="false"
                    android:layout_height="95dp" />

                <Button
                    android:text="@string/studentInfoRisisBtnText"
                    android:layout_width="90dp"
                    android:id="@+id/studentInfoRisisBtn"
                    android:layout_weight="1"
                    android:textSize="12sp"
                    android:background="@color/StudentInfoColor"
                    android:layout_marginLeft="2.5dp"
                    android:textColor="@color/TextWhite"
                    android:textAllCaps="false"
                    android:layout_height="95dp" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:id="@+id/thirdRowLayout"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp">

                <Button
                    android:text="@string/studentInfoStaffDirectoryBtnText"
                    android:layout_width="90dp"
                    android:id="@+id/studentInfoStaffDirectoryBtn"
                    android:layout_weight="1"
                    android:textSize="12sp"
                    android:layout_marginRight="2.5dp"
                    android:background="@color/StudentInfoColor"
                    android:textColor="@color/TextWhite"
                    android:capitalize="none"
                    android:textAllCaps="false"
                    android:layout_height="95dp" />

                <Space
                    android:layout_width="89dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
